<resources>
    <string name="app_name">HaVagas</string>
    <string name="name">Nome completo</string>
    <string name="email">E-mail</string>
    <string name="emailCheckbox">Receber e-mails com atualizações e oportunidades</string>
    <string name="phone">Telefone</string>
    <string name="commercial">Comercial</string>
    <string name="residential">Residencial</string>
    <string name="cellphoneCheckbox">Celular</string>
    <string name="cellphoneText">Celular</string>
    <string name="gender">Sexo</string>
    <string name="feminineRadioGroup">Feminino</string>
    <string name="male">Masculino</string>
    <string name="maleRadioGroup">Masculino</string>
    <string name="birthDate">Data nascimento</string>
    <string name="qualification">Formação</string>
    <string name="graduationDate">Ano de formatura</string>
    <string name="institution">Instituição</string>
    <string name="monographTitle">Titulo de monografia</string>
    <string name="advisor">Orientador</string>
    <string name="interestJobs">Vagas de interesse</string>
    <string name="saveButton">Salvar</string>
    <string name="cleanButton">Limpar</string>
    <string-array name="qualification">
        <item>Fundamental</item>
        <item>Médio</item>
        <item>Graduação</item>
        <item>Especialização</item>
        <item>Mestrado</item>
        <item>Doutorado</item>
    </string-array>
</resources>